[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/coin.png" type="Texture" id=1]
[ext_resource path="res://PlayerUI.gd" type="Script" id=2]

[node name="PlayerUI" type="VBoxContainer"]
margin_right = 200.0
margin_bottom = 38.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 17.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 26.0
margin_bottom = 17.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 17.0
texture = ExtResource( 1 )

[node name="Money" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 26.0
margin_bottom = 17.0
text = "0"

[node name="Weapon" type="Label" parent="HBoxContainer"]
margin_left = 41.0
margin_right = 77.0
margin_bottom = 17.0
text = "Scythe"

[node name="SillyText" type="Label" parent="."]
margin_left = 100.0
margin_top = 21.0
margin_right = 100.0
margin_bottom = 38.0
size_flags_horizontal = 4

[node name="SillyTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="SillyTimer" to="." method="_on_SillyTimer_timeout"]
